--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -324,7 +324,7 @@
                 </li>
                 <li class="fh5co">
                     <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-song" aria-hidden="true"></i>&nbsp;
+                        <i class="fa fa-music" aria-hidden="true"></i>&nbsp;
                         <span jhiTranslate="global.menu.pagesong-pages">Song</span>
                     </a>
                 </li>
@@ -341,14 +341,14 @@
                     </a>
                 </li>
 
-                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user" aria-hidden="true"></i> Sign in</a>
+                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user-circle" aria-hidden="true"></i> Sign in</a>
 
                 </li>
 
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p><small>&copy; 2018 PuigTheSong. All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span></p>
+            <p><small>&copy; 2018 <b>PuigTheSong.</b> All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span></p>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
