--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -40,8 +40,9 @@
 
     }
 
-    #fh5co-logo{
-        display: none!important;
+    img{
+        width: 40px;
+        height: 40px;
     }
     small{
         font-size: 63%!important;
