--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -126,88 +126,100 @@
                 <div class="col-sm-6 col-sm-offset-3">
                     <div id="imaginary_container">
                         <div class="input-group stylish-input-group">
-                            <input type="text"  id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search" placeholder="Buscar artista o canción">
+                            <input type="text" id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search"
+                                   placeholder="Buscar artista o canción">
                             <span class="input-group-addon">
                     <button(click)="searchSong()">
                             <span class="glyphicon glyphicon-search"></span>
-                        </button>
+                                </button>
                     </span>
                         </div>
                     </div>
                 </div>
             </div>
-        </div><br><br>
-          <div class="row">
-              <nav class="navbar navbar-expand-sm bg-light navbar-light">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link" (click)="changeCountry()" >Cambiar País</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Canciones</a>
-                  </li>
-              </ul>
-              </nav>
-          </div>
-                <div class="row">
-                    <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6 cols-xs-8">
-                        <div class="cover" [style.background-image]="sanitizeImage(search.albumId)">
-                            <div class="overlayInfo">
-                                <div>
-                                    <img id="{{search.id}}" (click)="like(search.id)" alt="vacio"
-                                         src="../../../content/images/heart-1.png">
-                                    <button class="btn btn-primary botonyoutube" id="y"
-                                            (click)="openModal(search.name, search.artistName)"><span class="glyphicon glyphicon-play"></span>Youtube
-                                    </button>
-                                    <audio controls class="audio">
-                                        <source src="{{search.previewURL}}" type="audio/mpeg">
-                                    </audio>
-                                </div>
-                            </div>
+        </div>
+        <br><br>
+        <div class="row">
+            <nav class="navbar navbar-expand-sm bg-light navbar-light">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="changeCountry()">Cambiar País</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Canciones</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="row">
+            <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6 cols-xs-8">
+                <div class="cover" [style.background-image]="sanitizeImage(search.albumId)">
+                    <div class="overlayInfo">
+                        <div>
+                            <img id="{{search.id}}" (click)="like(search.id)" alt="vacio"
+                                 src="../../../content/images/heart-1.png">
+                            <button class="btn btn-primary botonyoutube" id="y"
+                                    (click)="openModal(search.name, search.artistName)"><span
+                                class="glyphicon glyphicon-play"></span>Youtube
+                            </button>
+                            <audio controls class="audio">
+                                <source src="{{search.previewURL}}" type="audio/mpeg">
+                            </audio>
                         </div>
-                        <p class="tituloSong" style="text-align: center; color: white">{{search.name}}</p>
-                    </div>
-                    <div class="row">
-<br><br>
                     </div>
                 </div>
-                <div class="row">
-                    <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-3 col-md-4 col-sm-6 image-top">
-                        <div class="cover img-responsive" [style.background-image]="sanitizeImage(data.albumId)">
-                            <div class="overlayInfo">
-                                <div>
-                                    <img id="{{data.id}}" (click)="like(data.id)" alt="vacio"
-                                         src="../../../content/images/heart-1.png">
-                                    <button class="btn btn-primary botonyoutube"
-                                            (click)="openModal(data.name, data.artistName)"><span class="glyphicon glyphicon-play"></span>Youtube
-                                    </button>
-                                    <audio controls class="audio">
-                                        <source src="{{data.previewURL}}" type="audio/mpeg">
-                                    </audio>
-                                </div>
-                            </div>
-                        </div>
-                        <p class="tituloSong" style="text-align: center; color: black">{{data.name}}</p>
-                    </div>
-                    <div class="backdrop" [ngStyle]="{'display':display}"></div>
-                    <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display,'width':560}">
-                        <div class="modal-dialog" role="document">
-                            <div class="backdrop"></div>
-                            <div class="modal-content">
-                                <div class="modal-body">
-                                    <!-- X ponerla visible -->
-                                    <button type="button" class="close" (click)="onCloseHandled()">X</button>
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe id="embed-responsive-item" [src]="video" frameborder="0" allowfullscreen></iframe>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-                </div>
-
+                <p class="tituloSong" style="text-align: center; color: white">{{search.name}}</p>
+            </div>
+            <div class="row">
+                <br><br>
             </div>
         </div>
+        <div class="row">
+            <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-3 col-md-4 col-sm-6 image-top">
+                <div class="cover img-responsive" [style.background-image]="sanitizeImage(data.albumId)">
+                    <div class="overlayInfo">
+                        <div>
+                            <div>
+                                <div *ngIf="isLiked(data.id); else notLiked">
+                                    <img id="{{data.id}}" (click)="dislike(data.id)" alt="completo"
+                                         src="../../../content/images/heart-2.png">
+                                </div>
+                                <ng-template #notLiked>
+                                    <img id="{{data.id}}" (click)="like(data.id)" alt="vacio"
+                                         src="../../../content/images/heart-1.png">
+                                </ng-template>
+                                <button class="btn btn-primary botonyoutube"
+                                        (click)="openModal(data.name, data.artistName)"><span
+                                    class="glyphicon glyphicon-play"></span>Youtube
+                                </button>
+                                <audio controls class="audio">
+                                    <source src="{{data.previewURL}}" type="audio/mpeg">
+                                </audio>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="tituloSong" style="text-align: center; color: black">{{data.name}}</p>
+                </div>
+                <div class="backdrop" [ngStyle]="{'display':display}"></div>
+                <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display,'width':560}">
+                    <div class="modal-dialog" role="document">
+                        <div class="backdrop"></div>
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <!-- X ponerla visible -->
+                                <button type="button" class="close" (click)="onCloseHandled()">X</button>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe id="embed-responsive-item" [src]="video" frameborder="0"
+                                            allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+            </div>
+
+        </div>
+    </div>
 </div>
